<resources>
    <string name="app_name">PregAPP</string>
    <string name="toast1">Rejestracja przebiegła pozytywnie</string>

    <string name="page1_text1">Zaloguj się</string>
    <string name="page1_text2">Załóż konto</string>

    <string name="page2_text1">Rejestracja</string>
    <string name="page2_text2">Adres Email</string>
    <string name="page2_text3">Hasło</string>
    <string name="page2_text4">Powtórz hasło</string>
    <string name="page2_card1">Minimum 6 znaków</string>
    <string name="page2_card2">Minimum 1 liczba</string>
    <string name="page2_card3">Minimum 1 specialny symbol</string>
    <string name="page2_card4">Hasła muszą być takie same</string>

    <string name="page3_text1">Czy wiesz ile dni trwa twój cykl?</string>

    <string name="page4_text1">Wybierz ile dni trwa twój cykl</string>
    <string name="page4_text2">OK</string>

    <string name="page5_text1">Czy wiesz ile dni trwa twoja miesiączka?</string>

    <string name="page6_text1">Wybierz ile dni trwa twója miesiączka</string>

    <string name="page7_text1">Czy posiadasz dedykowane urządzenie?</string>

    <string name="page8_text1">Podaj numer urządzenia:</string>

    <string name="page9_text1">Logowanie</string>
    <string name="page9_text2">Zaloguj</string>

    <string name="page10_text1">Pomiar</string>
    <string name="page10_text2">Notatnik</string>
    <string name="page10_text3">Osoby upoważnione</string>

    <string name="page12_text1">okres za</string>
    <string name="page12_text2">00</string>
    <string name="page12_text3">dni</string>
    <string name="page12_text4">Miesiączka</string>
    <string name="page12_text5">Dni płodne</string>
    <string name="page12_text6">PMS</string>
    <string name="page12_text7">Ta opcja jest teraz nie dostępna, ponieważ jesteś w ciąży.</string>
    <string name="page12_text8">Nie podano jeszcze daty końca ostatniego okresu. Wybierz datę:</string>

    <string name="page13_text1">Ta funkcja aplikacji jest dostępna tylko dla kobiet będących w ciąży. Dlatego przed kliknięciem przycisku poniżej, upewnij się czy zaszłaś w ciążę. W dalszym ciągu możesz zmienić tę opcje w swoim \nprofilu -> zmiana danych</string>
    <string name="page13_text1_1">Funkcja ta jest dostępna tylko, jeżeli podałeś kod udostępniania. Tę opcje możesz znaleźć w swoim \nprofilu -> zmiana danych</string>
    <string name="page13_text2">Tak, jestem w ciąży</string>
    <string name="page13_text3">Grtulacje, cieszymy się razem z Tobą</string>

    <string name="page14_text1">Username</string>
    <string name="page14_text2">Mail</string>
    <string name="page14_text3">Płeć:</string>
    <string name="page14_text3_1">Płeć</string>
    <string name="page14_text4">Wiek:</string>
    <string name="page14_text4_1">Wiek</string>
    <string name="page14_text4_2">[lata]</string>
    <string name="page14_text5">Waga:</string>
    <string name="page14_text5_1">Waga</string>
    <string name="page14_text5_2">[kg]</string>
    <string name="page14_text6">Wzrost:</string>
    <string name="page14_text6_1">Wzrost</string>
    <string name="page14_text6_2">[cm]</string>
    <string name="page14_text7">Poziom aktywności:</string>
    <string name="page14_text7_1">Poziom aktywności</string>
    <string name="page14_text8">Zmiana danych</string>
    <string name="page14_text9">Wyloguj się</string>

    <string name="page15_text1">Podaj swoje dane</string>
    <string name="page15_text2">Płeć</string>
    <string name="page15_text3">Wiek</string>
    <string name="page15_text4">Waga</string>
    <string name="page15_text5">Wzrost</string>
    <string name="page15_text6">Poziom aktywności</string>

    <string name="page16_text1">Zmień swoje dane</string>
    <string name="page16_text2">Ciąża</string>
    <string name="page16_text3">Cykl</string>
    <string name="page16_text4">Miesiączka</string>
    <string name="page16_text5">Zatwierdź</string>
    <string name="page16_text6">Kod udostępnania</string>

    <string name="page17_text1">Pomiar temperatury</string>
    <string name="page17_text2">Pomiar ciśnienia i saturacji</string>
    <string name="page17_text3">Wykres pomiarów</string>

    <string name="page18_text1">1. Włącz urządzenie\n2. Przyłóż urządzenie do czoła\n3. Naciśnij przycisk na urządzeniu\n4. Poczekaj 10 sekund\n5. Sprawdź wartość pomiaru
      na urządzeniu</string>
    <string name="page18_text2">Pomiar został wykonany</string>
    <string name="page18_text3">Pomiar</string>

    <string name="page19_text1">1. Włącz urządzenie\n2. Przyłóż palec na wskazane miejsce\n3. Naciśnij przycisk na urządzeniu\n4. Poczekaj 10 sekund\n5. Sprawdź wartość pomiaru
      na urządzeniu</string>

    <string name="page20_text1">Temperatura</string>
    <string name="page20_text2">Ciśnienie</string>
    <string name="page20_text3">Saturacja</string>
    <string name="page20_text4">Wykres</string>

    <string name="page21_text1">Aby zapewnić prawidłowy przyrost wagi, limit kaloryczny wynosi:</string>
    <string name="page21_text2">Trymestr</string>
    <string name="page21_text3">kcal</string>
    <string name="page21_text4">Czasomierz skurczy</string>
    <string name="page21_text5">Najbliższy szpital</string>
    <string name="next">Dalej</string>

    <string name="page22_text1">Jeśli odejdą Ci wody lub zaczniesz silnie krwawić należy natychmiast udać się do szpitala!</string>
    <string name="page22_text2">Monitoruj skurcze i aplikacja poinformuje Cię, czy czas udać się do szpitala</string>
    <string name="page22_text3">SKURCZ</string>
    <string name="page22_text4_1">rozpoczął się</string>
    <string name="page22_text4_2">skończył się</string>
    <string name="page22_text5">Czas trwania</string>
    <string name="page22_text6">Odstępy</string>

    <string name="page24_text1">Ustawienia</string>
    <string name="page24_text2">Opcje Powiadomień</string>
    <string name="page24_text3">Otrzymywanie powiadomień</string>
    <string name="page24_text4">Opcje Monitorowania cyklu</string>
    <string name="page24_text5">Osoby upoważnione</string>
    <string name="page24_text6">Wygeneruj kod udostępniania</string>

    <string-array name="gender">
        <item>Kobieta</item>
        <item>Mężczyzna</item>
    </string-array>

    <string-array name="pregnant">
        <item>Tak</item>
        <item>Nie</item>
    </string-array>

    <string-array name="cycle">
        <item>0</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
    </string-array>

    <string-array name="period">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="day">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="year">
        <item>0</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>

    <string-array name="activity">
        <item>Brak</item>
        <item>Niska</item>
        <item>Średnia</item>
        <item>Wysoka</item>
        <item>Bardzo wysoka</item>
    </string-array>

    <string-array name="calendar">
        <item>kalendarz miesiączkowy</item>
    </string-array>

</resources>