<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page10_background"
    android:orientation="vertical"
    android:gravity="center|bottom"
    tools:context=".page_14">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/page14_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="26sp"
            android:textColor="@color/color2"
            android:text="@string/page14_text1" />

        <TextView
            android:id="@+id/page14_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="22sp"
            android:textColor="@color/color2"
            android:text="@string/page14_text2" />

        <View
            android:id="@+id/page14_line1"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_height="2dp"
            android:background="@color/color2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page14_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text3" />

            <TextView
                android:id="@+id/page14_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text3_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page14_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text4" />

            <TextView
                android:id="@+id/page14_text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text4_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page14_text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text5" />

            <TextView
                android:id="@+id/page14_text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text5_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page14_text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text6" />

            <TextView
                android:id="@+id/page14_text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text6_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page14_text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text7" />

            <TextView
                android:id="@+id/page14_text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:textColor="@color/color2"
                android:text="@string/page14_text7_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/page14_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect1"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:text="@string/page14_text8" />

            <Button
                android:id="@+id/page14_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect1"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:text="@string/page14_text9" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="3dp"
        android:background="@color/color4">

        <ImageButton
            android:id="@+id/page14_icon1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_effect2"
            android:layout_marginHorizontal="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon1"/>

        <ImageButton
            android:id="@+id/page14_icon2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_effect2"
            android:layout_marginHorizontal="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon2"/>

        <ImageButton
            android:id="@+id/page14_icon3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_effect2"
            android:layout_marginHorizontal="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon3"/>

        <ImageButton
            android:id="@+id/page14_icon4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_effect2"
            android:layout_marginHorizontal="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon4"/>

        <ImageButton
            android:id="@+id/page14_icon5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_effect2"
            android:layout_marginHorizontal="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon5_1"/>

    </LinearLayout>
</LinearLayout>