<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page2_background"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".page_15">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/page15_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:textSize="36sp"
                android:textColor="@color/color1"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="70dp"
                android:text="@string/page15_text1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/page15_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:fontFamily="@font/roboto"
                    android:textSize="18sp"
                    android:textColor="@color/color2"
                    android:text="@string/page15_text2" />

                <Spinner
                    android:id="@+id/page15_dropdown1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender"
                    android:background="@color/color5"
                    android:padding="2dp"
                    android:layout_marginVertical="10dp" />

                <TextView
                    android:id="@+id/page15_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:fontFamily="@font/roboto"
                    android:textSize="18sp"
                    android:textColor="@color/color2"
                    android:text="@string/page15_text3" />

                <EditText
                    android:id="@+id/page15_editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/color2"
                    android:backgroundTint="@color/color2"
                    android:layout_marginBottom="5dp"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/page15_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:fontFamily="@font/roboto"
                    android:textSize="18sp"
                    android:textColor="@color/color2"
                    android:text="@string/page15_text4" />

                <EditText
                    android:id="@+id/page15_editText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/color2"
                    android:backgroundTint="@color/color2"
                    android:layout_marginBottom="5dp"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/page15_text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:fontFamily="@font/roboto"
                    android:textSize="18sp"
                    android:textColor="@color/color2"
                    android:text="@string/page15_text5" />

                <EditText
                    android:id="@+id/page15_editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/color2"
                    android:backgroundTint="@color/color2"
                    android:layout_marginBottom="5dp"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/page15_text6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:fontFamily="@font/roboto"
                    android:textSize="18sp"
                    android:textColor="@color/color2"
                    android:text="@string/page15_text6" />

                <Spinner
                    android:id="@+id/page15_dropdown2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/activity"
                    android:background="@color/color5"
                    android:padding="2dp"
                    android:layout_marginVertical="10dp" />
            </LinearLayout>

            <Button
                android:id="@+id/page15_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect1"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>